@@ -3,7 +3,7 @@
  *   LinuxSampler - modular, streaming capable sampler                     *
  *                                                                         *
  *   Copyright (C) 2003, 2004 by Benno Senoner and Christian Schoenebeck   *
- *   Copyright (C) 2005, 2006 Christian Schoenebeck                        *
+ *   Copyright (C) 2005 - 2007 Christian Schoenebeck                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -125,6 +125,7 @@ namespace LinuxSampler { namespace gig {
             int                     iEngineIndexSelf;         ///< Reflects the index of this EngineChannel in the Engine's ArrayList.
             bool                    bStatusChanged;           ///< true in case an engine parameter has changed (e.g. new instrument, another volumet)
             std::vector<FxSend*>    fxSends;
+            int                     GlobalTranspose;          ///< amount of semi tones all notes should be transposed
 
             void ResetControllers();
             void ClearEventLists();
